--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h1>About Me</h1>
-        <p>[Add personal information you'd like to share with employers.]</p>
+        <p>Hello! My name is Katelyn and I am currently a senior at the University of Oklahoma set to graduate in May of 2025. I am studying Management Information Systems and hoping to find a full time job for the end of the 2025 year. </p>
     </main>
 </body>
 </html>
