--- a/projects.html
+++ b/projects.html
@@ -20,10 +20,19 @@
     </header>
     <main>
         <h1>Projects</h1>
-        <ul>
-            <li><a href="https://github.com/your-repo">Project 1</a> - Short description</li>
-            <li><a href="https://github.com/your-repo">Project 2</a> - Short description</li>
-        </ul>
+        <section>
+            <h2>Bolted Revenue: Elysian Fly Company</h2>
+            <p><strong>Course:</strong> MIS 3353 Database Management</p>
+            <p><strong>Team Members:</strong> Andrea Barcenas, Cole Fielding, Katelyn Haynes, Matthew Nguyen, Joshua Sowell</p>
+            <p>This project involved designing and implementing a database solution for Elysian Fly Company, focusing on inventory and vendor management, sales processes, and data optimization. Key achievements included:</p>
+            <ul>
+                <li>Developing an Entity-Relationship Diagram (ERD) to organize and map data relationships.</li>
+                <li>Implementing normalization to reduce redundancy and improve database efficiency.</li>
+                <li>Creating a data dictionary for better data governance and consistency.</li>
+                <li>Integrating business cycles like revenue and expenditure into the database design.</li>
+            </ul>
+            <p>View the full presentation: <a href="Final_MIS_3353.pdf" target="_blank">Download PDF</a></p>
+        </section>
     </main>
 </body>
 </html>
